# SpikeFX

./: CMakeLists.txt  Makefile  README.md
src/: main.cpp
src/geo/: Asset.cpp  Asset.hpp  Box.cpp  Box.hpp  CMakeLists.txt  Geo.cpp  Geo.hpp  Light.cpp  Light.hpp  Quad.cpp  Quad.hpp  Scene.cpp  Scene.hpp  Sphere.cpp  Sphere.hpp  Triangle.cpp  Triangle.hpp
src/math/: CMakeLists.txt  Color.cpp  Color.hpp  Matrix.cpp  Matrix.hpp  Vector.cpp  Vector.hpp
src/tex/: BaseTex.cpp  BaseTex.hpp  CMakeLists.txt  MultiTex.cpp  MultiTex.hpp  TexIF.hpp  TexMgr.cpp  TexMgr.hpp  TexStack.cpp  TexStack.hpp  Texture.cpp  Texture.hpp  readrgba.cpp  readrgba.h
tex/: brick.rgb  checkerboard.rgb  eoe4.rgb  mdudley.rgb
tools/: helpers.cmake
